[package]
name = "justshop-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.2"
futures = "0.3.30"
serde = { version = "1.0.149", features = ["derive"] }
serde_arrays = "0.1.0"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.15"
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = [ "serde" ]}
warp = { version = "0.3.6", features = [] }
